<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_coffee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/vertical_margin">

    <EditText
        android:id="@+id/mTextNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_8"
        android:hint="@string/YN"
        android:textSize="@dimen/text_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/BS"
        android:textAllCaps="true"
        android:textSize="@dimen/text_14"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/mSpinnerMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_8"
        android:text="@string/TS"
        android:textAllCaps="true"
        android:textSize="@dimen/text_14"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/mRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_8">

        <RadioButton
            android:id="@+id/mRadioItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running" />

        <RadioButton
            android:id="@+id/mRadioItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casual" />

        <RadioButton
            android:id="@+id/mRadioItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classic"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_8"
        android:text="@string/Quan"
        android:textAllCaps="true"
        android:textSize="@dimen/text_14"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mButtonMin"
            android:layout_width="@dimen/text_40"
            android:layout_height="@dimen/text_40"
            android:onClick="onClickMin"
            android:text="@string/tandamin"
            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/mTextQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nol"
            android:textSize="@dimen/text_14" />

        <Button
            android:id="@+id/mButtonPlus"
            android:layout_width="@dimen/text_40"
            android:layout_height="@dimen/text_40"
            android:onClick="onClickPlus"
            android:text="@string/plus"
            android:textSize="@dimen/text_14" />
    </LinearLayout>

    <TextView
        android:id="@+id/mTextHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_8"
        android:text="@string/harga"
        android:textSize="@dimen/text_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickReset"
            android:text="@string/reset"
            android:textSize="@dimen/text_14" />

        <Button
            android:id="@+id/mButtonOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickOrder"
            android:text="@string/order"
            android:textSize="@dimen/text_14" />
    </LinearLayout>
</LinearLayout>

